updated with demo link

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="card">
             <div class="card-header ">ThunderQuote Code</div>
             <div class="card-body">
-                <h5 class="card-title">Welcome to the ThunderQuote public code repository</h5>
+                <h5 class="card-title">Welcome to the ThunderQuote Public Code Repository</h5>
                 <h6 class="card-subtitle mb-2 text-muted">See below for list of projects</h6>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                     <p class="mb-1">
-                        <a href="https://github.com/ThunderQuoteTeam/PaynowQR">SGQR Paynow generator</a><br/>
-                        <small>Javascript plugin, compatible with nodejs & browser, for generating SGPAY QR code</small>
+                        <a href="/PaynowQR">SGQR Paynow generator</a><br/>
+                        <small>Javascript plugin, compatible with nodejs & browser, for generating Singapore PAYNOW QR code</small>
                     </p>
                     
-                    <a class="btn btn-xs btn-demo d-none">Demo</a>
+                    <a class="btn btn-outline-info btn-xs btn-demo" href="/PaynowQR"><i class="far fa-play-circle"></i><span class="text bg-info text-white">Demo</span></a>
                     <a class="btn btn-xs btn-outline-dark btn-sm btn-demo" href="https://github.com/ThunderQuoteTeam/PaynowQR"><i class="fab fa-github"></i><span class="text bg-dark text-white">GitHub</span></a>
                     <a class="btn btn-xs red btn-outline-danger btn-sm btn-demo" href="https://www.npmjs.com/package/paynowqr"><i class="fab fa-npm"></i> <span class="text bg-danger text-white">NPM</span></a>
                 </li>
