--- a/index.html
+++ b/index.html
@@ -45,13 +45,21 @@
                 <li class="list-group-item">
                     <p class="mb-1">
                         <a href="/PaynowQR">SGQR Paynow generator</a><br/>
-                        <small>Javascript plugin, compatible with nodejs & browser, for generating Singapore PAYNOW QR code</small>
+                        <small>Javascript plugin, compatible with nodejs & browser, for generating Singapore PayNow QR code</small>
                     </p>
                     
                     <a class="btn btn-outline-info btn-xs btn-demo" href="/PaynowQR"><i class="far fa-play-circle"></i><span class="text bg-info text-white">Demo</span></a>
                     <a class="btn btn-xs btn-outline-dark btn-sm btn-demo" href="https://github.com/ThunderQuoteTeam/PaynowQR"><i class="fab fa-github"></i><span class="text bg-dark text-white">GitHub</span></a>
                     <a class="btn btn-xs red btn-outline-danger btn-sm btn-demo" href="https://www.npmjs.com/package/paynowqr"><i class="fab fa-npm"></i> <span class="text bg-danger text-white">NPM</span></a>
                 </li>
+                <li class="list-group-item">
+                    <p class="mb-1">
+                        <a href="/PaynowQR">Xero PayNowQR</a><br/>
+                        <small>Integration of PayNow QR with Xero invoicing.</small>
+                    </p>
+                    <a class="btn btn-xs btn-outline-dark btn-sm btn-demo" href="https://github.com/ThunderQuoteTeam/XeroPayNowQR"><i class="fab fa-github"></i><span class="text bg-dark text-white">GitHub</span></a>
+                </li>
+                
             </ul>
             <div class="alert alert-info m-0 p-4">
                 <h5 class="alert-heading">Have any questions or need help to do a custom implementation?</h5>
