--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </li>
                 <li class="list-group-item">
                     <p class="mb-1">
-                        <a href="/PaynowQR">Xero PayNowQR</a><br/>
+                        <a href="https://github.com/ThunderQuoteTeam/XeroPayNowQR">Xero PayNowQR</a><br/>
                         <small>Integration of PayNow QR with Xero invoicing.</small>
                     </p>
                     <a class="btn btn-xs btn-outline-dark btn-sm btn-demo" href="https://github.com/ThunderQuoteTeam/XeroPayNowQR"><i class="fab fa-github"></i><span class="text bg-dark text-white">GitHub</span></a>
