--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66541190-17"></script>
     <script>
-        window.location.herf = "https://dhcertainty.org";
+        window.location.href = "https://dhcertainty.org";
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
